# news-hub

./: .dockerignore  .env.example  .gitignore  Dockerfile  RAILWAY_READY.md  README.md  pyproject.toml  railway.json
deploy/: DEPLOYMENT_GUIDE.md  dashboard.py  start.sh
n8n_workflows/: README.md  api_server.py  test-workflow.json
news_hub/: __init__.py  main.py  scheduler.py
news_hub/config/: characters.py  settings.py
news_hub/pipeline/: __init__.py  news_fetcher.py  script_generator.py  social_uploader.py  video_generator.py
tests/: test_characters.py  test_news_fetcher.py  test_video_generator.py
